switching utils-web to esbuild added mock capability
- seems to work (tested by manually copying over the resulting .js bundle to a cap's node_module folder)
- not much benefit for now, webpack is pretty fast in this case
- next step would be to replace webpack serve with https://esbuild.github.io/api/#live-reload

utils-caps, esbuild: build both iife and esm
web: using esbuild, mock capability, useComponent + Transitive comp
web: moved all test related files to `test/`

--- a/web/test/static/index.html
+++ b/web/test/static/index.html
@@ -12,6 +12,6 @@
     <div style='height: 100%' id='app'>
     </div>
 
-    <script src='index.bundle.js'></script>
+    <script src='index.js'></script>
   </body>
 </html>
